@@ -2,4 +2,3 @@ TODO:
 	* Register what article includes what font-code.
 	* SpecialPage: separate REQUEST actions.
 		** others...
-	* Pre-recursive parse inside tags.
